--- a/Day 2/index.html
+++ b/Day 2/index.html
@@ -33,6 +33,7 @@
     <h1>Hello Cohort!</h1>
     
     <script src="script.js"></script>
+    <script src="ques.js"></script>
     <!-- <script src="script2.js"></script>
     <script src="script3.js"></script>
     <script src="script4.js"></script>
